--- a/index.html
+++ b/index.html
@@ -1,27 +1,172 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<style>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>CIPM</title>
+<style type="text/css">
 html, body {
-  height: 100%;
-}
-img {
-  width: 100%;
-}
-html {
-  display: table;
-  margin: auto;
+    margin: 0px auto;
+    width: 100%;
+    height: 100%;
 }
 
-body {
-  display: table-cell;
-  vertical-align: middle;
+img {
+  border: 0px;
 }
+
+.t, .lm, .cm, .rm, .f {
+    width: 100%;
+}
+
+.l {
+	display: block;
+	float: left;
+	width: 34.32%;
+}
+
+/*
+.l a{ background:url(images/l.jpg) top left no-repeat; width:659px; height:434px; display:block; float:left}
+.l a:hover{ background:url(images/l_h.jpg) top left no-repeat; width:659px; height:434px; display:block; float:left}*/
+
+.c {
+	display: block;
+	float: left;
+	width: 26.88%;
+}
+
+/*
+.c a{ background:url(images/c_1.jpg) top left no-repeat; width:516px; height:434px; display:block; float:left}
+.c a:hover{ background:url(images/c_1_h.jpg) top left no-repeat; width:516px; height:434px; display:block; float:left}*/
+
+.r {
+	display: block;
+	float: left;
+	width: 38.80%;
+}
+/*
+.r a{ background:url(images/r.jpg) top left no-repeat; width:745px; height:434px; display:block; float:left}
+.r a:hover{ background:url(images/r_h.jpg) top left no-repeat; width:745px; height:434px; display:block; float:left}*/
 </style>
 </head>
 <body>
-<a href="./cape">
-<img src="./images/bg.jpg" />
-</a>
+<div class="wrap">
+	<div style=""><img class="t" src="images/top.jpg" /></div>
+	<div style="clear:both"></div>
+	<div class="l"><a href="#"><img class="lm" src="images/l.jpg" /></a></div>
+	<div class="c"><a href="./cape"><img class="cm" src="images/c_1.jpg" /></a></div>
+	<div class="r"><a href="#"><img class="rm" src="images/r.jpg" /></a></div>
+	<div style="clear:both"></div>
+	<div style=""><img class="f" src="images/b.jpg" /></div>
+</div>
+<!--<div style="position:absolute;top:102%;left:44%;font-size:15px;font-family:'宋体';font-weight:normal;color:#FFFFFF;">
+    <p>京ICP备14058628号</p>
+</div>-->
 </body>
+<script type="text/javascript" src="lib/jquery.js" ></script>
+<script>
+/**
+ * Protect window.console method calls, e.g. console is not defined on IE
+ * unless dev tools are open, and IE doesn't define console.debug
+ */
+(function() {
+  if (!window.console) {
+    window.console = {};
+  }
+  // union of Chrome, FF, IE, and Safari console methods
+  var m = [
+    "log", "info", "warn", "error", "debug", "trace", "dir", "group",
+    "groupCollapsed", "groupEnd", "time", "timeEnd", "profile", "profileEnd",
+    "dirxml", "assert", "count", "markTimeline", "timeStamp", "clear"
+  ];
+  // define undefined methods as noops to prevent errors
+  for (var i = 0; i < m.length; i++) {
+    if (!window.console[m[i]]) {
+      window.console[m[i]] = function() {};
+    }    
+  } 
+})();
+
+var middle_image_height = 434;
+
+// Background image resize ratio.
+var p = 0;
+
+$(function() {
+    var win_w = document.body.clientWidth - 2;
+    var win_h = document.body.clientHeight - 2;
+
+    console.log("Window size : " + win_w + "x" + win_h);
+
+    // Backgroud image is 1920x940
+    var pw = win_w / 1920;
+    var ph = win_h / 940;
+
+    //设置外边距
+    if (pw <= ph) {
+        console.log("White padding on top/bottom");
+        p = pw;	
+        var pad = Math.ceil((win_w - 1920*p)/2);
+        //$(".wrap").css("padding-left", pad);
+    } else {
+        console.log("White padding on left/right");
+        p = ph;
+        var pad = Math.ceil((win_h - 940*p)/2);
+        //$(".wrap").css("padding-top", pad);			
+    }
+
+    // Requirement changed, ticket:15554#comment:50
+    p = pw;
+
+    console.log("Resize ratio: " + p);
+
+    //$(".wrap").width(Math.ceil(1920*p));
+
+    //$(".t").attr("width", Math.ceil(1920*p));
+    $(".t").height(Math.ceil($(".t").attr("height")*p));			
+
+    var image_resize_height = Math.ceil(middle_image_height * p);
+
+    //$(".lm").width(Math.ceil($(".lm").width()*p));
+    $(".lm").height(image_resize_height);
+    //$(".cm").width(Math.ceil($(".cm").width()*p));
+    $(".cm").height(image_resize_height);
+    //$(".rm").width(Math.ceil($(".r").width()*p));
+    $(".rm").height(image_resize_height);
+    
+    //$(".f").attr("width",  Math.ceil(1920*p));
+    $(".f").height(Math.ceil($(".f").attr("height")*p));
+});
+
+$(window).resize(function() {
+    location.reload(true);
+});
+
+$(".lm")
+	.mouseover(function(){
+		$(".lm").attr("src","images/l_h.jpg");
+	})
+	.mouseout(function(){
+		$(".lm").attr("src","images/l.jpg");
+	});
+		
+
+$(".cm")
+	.mouseover(function(){
+		$(".cm").attr("src","images/c_1_h.jpg");
+	})
+	.mouseout(function(){
+		$(".cm").attr("src","images/c_1.jpg");
+	});
+			
+	
+$(".rm")
+	.mouseover(function(){
+		$(".rm").attr("src","images/r_h.jpg");
+	})
+	.mouseout(function(){
+		$(".rm").attr("src","images/r.jpg");
+	});	
+			
+
+</script>
 </html>
