--- a/yaojizhan/index.html
+++ b/yaojizhan/index.html
@@ -12,14 +12,22 @@ body {
 img, a img {
   border: 0;
 }
+
+/* search box */
+
 .search-box {
   position: fixed;
   right: 0;
-  border: 1px solid #ccc;
-  width: 200px;
-  height: 50px;
+  /*border: 1px solid #ccc;*/
+  width: 500px;
+  /*height: 106px;*/
   z-index: 9999;
-  background-color: white;
+  /*background-color: white;*/
+  padding: 5px;
+}
+
+.ui-button-text {
+  font-size: .8em !important;
 }
 
   #project-label {
@@ -73,9 +81,58 @@ img, a img {
 </head>
 <body>
 <div class="search-box">
-  <div id="project-label">搜索展厅</div>
+  <!--<div id="project-label">搜索展厅</div>-->
+
+
+
+
+<div style="
+    width: 462px;
+    height: 56px;
+    background: url(images/search-box.png);
+    /* padding: 17px; */
+">
+  <div style="
+    float: left;
+    height: 22px;
+    margin: 17px 0 17px 57px;
+"><input id="project" type="text" style="
+    width: 300px;
+    border: 0px;
+    height: 23px;
+"></div>
+
+  <div style="
+    float: left;
+    height: 34px;
+    width: 82px;
+    padding: 11px;
+">
+<button class="search ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" role="button" aria-disabled="false" style="
+    background: transparent;
+    border: 0px;
+    display: inline-block;
+    position: relative;
+    padding: 0;
+    margin-right: .1em;
+    text-decoration: none !important;
+    cursor: pointer;
+    text-align: center;zoom:1;
+    overflow: visible;
+width:80px;
+height:34px;
+">
+</button>
+</div>
+</div>
+
+
+
+
+
+
   <img id="project-icon" src="images/transparent_1x1.png" class="ui-state-default" alt="" style="display: none;">
-  <input id="project">
+  <!--<input id="project"> <button class="search">搜索</button>-->
   <input type="hidden" id="project-id">
   <p id="project-description"></p>
 </div>
@@ -231,6 +288,12 @@ $(function() {
       });
     }
   }
+
+  $( "button.search" )
+    .button()
+    .click(function( event ) {
+      //event.preventDefault();
+    });
 
   $( "#project" ).autocomplete({
     minLength: 0,
